--- a/public/redSocial.html
+++ b/public/redSocial.html
@@ -2,8 +2,11 @@
 <html>
 
 <head>
+    <!-- se usa casi siempre cuando se hacen apps -->
+    <meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
     <title>Red Social</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/redSocial.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
